<resources>
    <string name="app_name">PPV</string>
    <string name="action_settings">Settings</string>
    <string name="workitem_txt">工作项</string>
    <string name="workvalue_txt">价值</string>
    <string name="worknone_txt">暂空</string>
    <string name="oneself_txt">个人信息</string>
    <string name="Processing">处理中</string>
    <string name="ToDo">待处理</string>
    <string name="Done">已处理</string>
    <string name="ToVoid">已作废</string>
    <string name="AboutMe">关于我</string>
    <string name="sortStyle">排序</string>
    <string name="filter">筛&#160;选</string>
    <string name="valuesum">&#160;&#160;总价值&#160;</string>
    <string name="monthsum">&#160;&#160;累计月份&#160;</string>
    <string name="WorkValue">&#160;&#160;工作分值&#160;</string>
    <string name="EndingTime">&#160;&#160;结束时间&#160;</string>
    <string name="WorkState">&#160;&#160;工作状态&#160;</string>
    <!--<string-array name="valuesort_arr">-->
    <!--<item>升序</item>-->
    <!--<item>降序</item>-->
    <!--</string-array>-->
    <!--<string-array name="valuefilter_arr">-->
    <!--<item>本月</item>-->
    <!--<item>全部</item>-->
    <!--<item>本季度</item>-->
    <!--</string-array>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_work_item">AddNewWorkItem</string>
    <string name="Add_lab_1">标题：</string>
    <string name="add_lab_2">指派给：</string>
    <string name="add_lab_3">负责人：</string>
    <string name="add_lab_4">检查人：</string>
    <string name="add_lab_5">状态：</string>
    <string name="add_lab_6">截止时间：</string>
    <string name="add_lab_7">估\n算\n价\n值</string>
    <string name="add_lab_8">描\n述</string>
    <string name="workTitle">标题：</string>
    <string name="workTarget">指标：</string>
    <string name="workAssign">指派给：</string>
    <string name="workChecker">检查人：</string>
    <string name="modyfiTime">修改时间：</string>
    <string name="workState">状态：</string>
    <string name="endingTime">截止时间：</string>
    <string name="description">描述：</string>
    <string name="workCreater">创建人：</string>
    <string name="modyfier">修改人：</string>
    <string name="createTime">创建时间：</string>
    <string name="planValue">&#160;理想价值：</string>
    <string name="trueValue">&#160;实际价值：</string>
    <string name="DBname">/com.example.beyondsys.pvv/ppvdata.db</string>
    <string name="passwordChange">修改密码</string>
    <string name="personInfo">个人资料</string>
    <string name="setting">设 置</string>
    <string name="wi_s_one_txt">指派给我</string>
    <string name="wi_s_one_txt_2">与我相关</string>
    <string name="wi_s_pro_txt">待处理</string>
    <string name="wi_s_proing_txt">处理中</string>
    <string name="wi_s_complete_txt">已完成</string>
    <string name="wi_s_invalid_txt">已作废</string>
    <string name="wi_list_item_text_1">状态</string>
    <string name="myDescription">个性签名</string>
    <string name="myAdress">我的地址</string>
    <string name="myID"><![CDATA[ID 号码]]></string>
    <string name="myPhone"><![CDATA[电  话]]></string>
    <string name="myEmail"><![CDATA[邮  箱]]></string>
    <string name="myName"><![CDATA[名  称]]></string>
    <string name="myImage"><![CDATA[头  像]]></string>
    <string name="oldPassword">原始密码：</string>
    <string name="newPassword">新密码：</string>
    <string name="checkPassword">确认密码：</string>
    <string name="wid_titlt_lab_1">工作项详细信息</string>
    <string name="wid_lab_1">标题：</string>
    <string name="wid_lab_2">指派给：</string>
    <string name="wid_lab_3">检查人：</string>
    <string name="wid_lab_4">创建人:</string>
    <string name="wid_lab_5">创建时间：</string>
    <string name="wid_lab_6">修改人：</string>
    <string name="wid_lab_7">修改时间：</string>
    <string name="wid_lab_9">状态：</string>
    <string name="wid_lab_10">截止时间：</string>
    <string name="wid_lab_11">描述：</string>
    <string name="sortup">升序</string>
    <string name="sortdown">降序</string>
    <string name="anw_lab_1">添加新工作项</string>
    <string name="popup_lab_1">添加子工作项</string>
    <string name="popup_lab_2">删除该工作项</string>
    <string name="popup_lab_3">废除该工作项</string>
    <string name="popup_lab_4">指定委派人员</string>
    <string name="popup_lab_5">确认当前状态</string>
    <string name="popup_lab_6">提交修改结果</string>
    <string name="pvd_lab_1">价值详细信息</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="FindPassword">密码找回</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="userid">ID号码：</string>
    <string name="username">用户名：</string>
    <string name="userRedister">用户注册</string>
    <string name="filter_by_currentmonth">本月</string>
    <string name="filter_by_all">历史累积</string>
    <string name="quit">退出登录</string>
    <string name="userPhone">手机号码：</string>
    <string name="userEmail">邮箱地址：</string>
    <string name="changestatus">修改当前状态</string>
    <string name="del_child">删除子工作项</string>
</resources>
