<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/dttail_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:src="@drawable/title_back"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="37sp"
                android:gravity="center"
                android:textColor="@color/White"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/title_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/add_btn"
                android:layout_margin="10sp"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="9"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border">

            <ImageView android:id="@+id/work_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"/>

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView android:id="@+id/workname_tex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainFont"
                        android:text="事务一"
                        android:textSize="26sp" />
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/infoFont"
                            android:text="@string/EndingTime"
                            android:layout_toLeftOf="@+id/endingtime_tex"
                            android:textSize="18sp" />
                        <TextView android:id="@+id/endingtime_tex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/infoFont"
                            android:layout_alignParentRight="true"
                            android:text="2016/22/33"
                            android:textSize="18sp" />
                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/infoFont"
                        android:text="@string/WorkValue"
                        android:textSize="18sp" />
                    <TextView android:id="@+id/workvalue_tex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/infoFont"
                        android:text="20分"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/infoFont"
                        android:text="@string/WorkState"
                        android:textSize="18sp" />
                    <TextView android:id="@+id/workstate_tex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/infoFont"
                        android:text="@string/ToDo"
                        android:textSize="18sp" />
                </LinearLayout>



            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/workTitle"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/worktitlett_tex_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="事务一"
                    android:gravity="center"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/workTarget"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workTarget_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="***"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/workAssign"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workAssign_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="张三"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/workChecker"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workChecker_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="王五"
                    android:gravity="center"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/workCreater"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workCreater_tex"
                    android:layout_width="0sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="李四"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/createTime"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workCrateTime_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2016/12/12"
                    android:textSize="18sp">
                </TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/modyfier"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workModifyer_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="李四"
                    android:gravity="center"
                    android:textSize="18sp">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/modyfiTime"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workModifyTime_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2016/12/12"
                    android:gravity="center"
                    android:textSize="18sp">
                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/workState"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workState_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="待做"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum ="2" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/endingTime"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workEndingTime_tex"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2017/01/01"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:orientation="horizontal"
                android:weightSum ="6" >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/description"
                    android:gravity="center"
                    android:textSize="18sp"></TextView>
                <TextView
                    android:id="@+id/workDescription_tex"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="#########################"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>
        </LinearLayout >

    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:gravity="center_vertical"
        android:background="@color/tabColor" >
        <ImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_no"/>
        <ImageButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/remove_no"
            android:layout_toRightOf="@+id/add" />
    </RelativeLayout>
</LinearLayout>
