<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backcol">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:orientation="horizontal"
        android:background="@color/text"
        android:layout_marginBottom="10sp">
        <LinearLayout
            android:id="@+id/wi_s_one"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/White"
            android:layout_marginRight="1sp">
            <ImageView
                android:layout_width="22sp"
                android:layout_height="22sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4sp"
                android:src="@drawable/work_one"/>
            <TextView
                android:id="@+id/wi_s_one_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wi_s_one_txt"
                android:textSize="11sp"
                android:textColor="@color/text"
                android:layout_marginTop="2sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/wi_s_pro"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/White">
            <ImageView
                android:layout_width="22sp"
                android:layout_height="22sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4sp"
                android:src="@drawable/work_pro"/>
            <TextView
                android:id="@+id/undo_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wi_s_pro_txt"
                android:textSize="11sp"
                android:layout_marginTop="2sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/wi_s_proing"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/White">
            <ImageView
                android:layout_width="22sp"
                android:layout_height="22sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4sp"
                android:src="@drawable/work_proing"/>
            <TextView
                android:id="@+id/proing_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wi_s_proing_txt"
                android:textSize="11sp"
                android:layout_marginTop="2sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/wi_s_complete"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/White">
            <ImageView
                android:layout_width="22sp"
                android:layout_height="22sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4sp"
                android:src="@drawable/work_complete"/>
            <TextView
                android:id="@+id/done_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wi_s_complete_txt"
                android:textSize="11sp"
                android:layout_marginTop="2sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/wi_s_invalid"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/White">
            <ImageView
                android:layout_width="22sp"
                android:layout_height="22sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4sp"
                android:src="@drawable/work_invalid"/>
            <TextView
                android:id="@+id/cancel_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wi_s_invalid_txt"
                android:textSize="11sp"
                android:layout_marginTop="2sp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workitem_list"/>
</LinearLayout>
