<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView android:id="@+id/work_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"/>

    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <TextView android:id="@+id/workname_tex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainFont"
            android:textSize="26sp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/infoFont"
                    android:text="@string/EndingTime"
                    android:layout_toLeftOf="@+id/endingtime_tex"
                    android:textSize="18sp" />
                <TextView android:id="@+id/endingtime_tex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/infoFont"
                    android:layout_alignParentRight="true"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/infoFont"
                android:text="@string/WorkValue"
                android:textSize="18sp" />
            <TextView android:id="@+id/workvalue_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/infoFont"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/infoFont"
                android:text="@string/WorkState"
                android:textSize="18sp" />
            <TextView android:id="@+id/workstate_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/infoFont"
                android:textSize="18sp" />
            </LinearLayout>



    </LinearLayout>
</LinearLayout>
